Docker image name is cleaned up.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -57,6 +57,7 @@
     <script src="/app/layout/layout.module.js"></script>
     <script src="/app/layout/shell.controller.js"></script>
     <script src="/app/hosts/hosts.module.js"></script>
+    <script src="/app/hosts/hosts.filters.js"></script>
     <script src="/app/hosts/hosts.controller.js"></script>
     <script src="/app/hosts/host.controller.js"></script>
     <script src="/app/hosts/container.controller.js"></script>
