- Convenience helpers for presenting modals. - Better "images/create" response handling.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -53,6 +53,7 @@
     <script src="/app/api/sync/api.sync.module.js"></script>
     <script src="/app/api/sync/api.sync.fs.js"></script>
     <script src="/app/controls/controls.module.js"></script>
+    <script src="/app/controls/controls.service.js"></script>
     <script src="/app/controls/modal.json.controller.js"></script>
     <script src="/app/layout/layout.module.js"></script>
     <script src="/app/layout/shell.controller.js"></script>
